Fix overflow styling issues entity data and <code>

--- a/src/main/react/Main.css
+++ b/src/main/react/Main.css
@@ -3,6 +3,7 @@ code {
   font-size: 1rem;
   background-color: rgba(.4, .4, .4, .05);
   border: 1px solid rgba(1, 1, 1, .05);
-  padding: .1em .3em;
+  padding: .1rem .3rem;
+  line-height: 1.4rem;
   border-radius: 4px;
 }
